# ncut_pytorch

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  TODOs.MD  benchmark_distance.py  example_optimized_distance.py  gradient.py  mkdocs.txt  mkdocs.yml  ncut_feature_extractors.py  ncut_pytorch.py  ncut_turtorial_large_scale.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  versions.json
1.13.14/: 404.html  draft_image_ncut.py  gen_version.py  index.html
1.13.14/add_nodes/: index.html
1.13.14/api_reference/: index.html
1.13.14/application_segmentation/: index.html
1.13.14/backbones/: index.html
1.13.14/demo/: index.html
1.13.14/gallery_application/: index.html
1.13.14/gallery_dataset/: index.html
1.13.14/gallery_gpt2/: index.html
1.13.14/gallery_llama3/: index.html
1.13.14/gallery_mae/: index.html
1.13.14/gallery_sam/: index.html
1.13.14/gallery_sam2_video/: index.html
1.13.14/gallery_sam_video/: index.html
1.13.14/gradient_of_ncut/: index.html
1.13.14/how_ncut_works/: index.html
1.13.14/mixing_data/: index.html
1.13.14/parameters/: index.html
1.13.14/search/: search_index.json
1.13.14/tutorials/: index.html
docs/: TODOs.MD  add_nodes.md  alignedcut_vs_ncut.md  api_reference.md  application_gallery.md  application_segmentation.md  coloring.md  compare.md  demo.md  discrete_ncut.md  draft.py  draft_image_ncut.py  draft_nystrom.py  draft_shift.py  draft_speed.py  gallery.md  gallery_application.md  gallery_dinov2.md  gallery_dinov2_video.md  gallery_mae.md  gallery_sam2_video.md  gallery_sam_video.md  gen_version.py  gradient_of_ncut.md  how_ncut_works.md  how_to_get_better_segmentation.md  image_crop.py  index.md  local_demo.md  memory_usage.md  mixing_data.md  mkdocs.txt  mkdocs.yml  model_feature_gallery.md  parameters.md  requirements.txt  speed_and_performance.md  trouble_shooting.md  tutorials.md  update_version.py
docs/docs/: .nav.yml  add_nodes.md  alignedcut_vs_ncut.md  channel_tracing.md  compare.md  discrete_ncut.md  feature_alignment.md  gallery.md  gallery_clip.md  gallery_dataset.md  gallery_dinov2_video.md  gallery_gpt2.md  gallery_llama3.md  gallery_sam2_video.md  hierarchy_ncut.md  how_fast_is_ncut.md  index.md  local_demo.md  migration_3_0.md  mkdocs.yml  own_model.md  parameters.md  trouble_shooting.md  tutorials.md  what_is_ncut.md
examples/: generate.ipynb  predictor.ipynb  summary.ipynb  test.py
ncut_pytorch/: MANIFEST.in  README.md  __init__.py  backbone.py  biased_ncut.py  gamma.py  kway_ncut.py  math_utils.py  mspace.py  ncut.py  ncut_feature_extractors.py  ncut_pytorch.py  nystrom_ncut.py  nystrom_utils.py  predictor.py  project.toml  requirements.txt  sample_utils.py  setup.py  visualize_utils.py
ncut_pytorch/color/: __init__.py  color.py  coloring.py  mspace.py
ncut_pytorch/dino/: __init__.py  api.py  hires_dino.py  lowres_dino.py  patch.py  transform.py
ncut_pytorch/ncut_pytorch/: __init__.py  affinity_gamma.py  backbone.py  backbone_text.py  biased_ncut.py  math_utils.py  ncut_pytorch.py  new_ncut_pytorch.py  nystrom.py  nystrom_utils.py  propagation_utils.py  utils.py  visualization.py  visualize_utils.py
notebooks/: attn_vs_hiera.py  compare.py  compare_pca.py  custom_model.py  draft_dv3.py  generate.py  predictor.py  predictor_preview.ipynb  preview.ipynb  summary.ipynb  summary.py
site/: draft2.py  draft_shift.py  objects.inv
tests/: .gitignore  approximation_check.py  biased_ncut_fg_bg.py  biased_ncut_multiclass.py  biased_ncut_one_class.py  bruteforce_nystrom.py  compare_jit_svd.py  d_gamma_quantile.py  hie.py  hierachy_featup.py  hierachy_hiresdino.py  hierarchical_ncut.py  hierarchical_ncut_kernel.py  hires_dino.py  hiresdino_generate.py  hiresdino_inference.py  hiresdino_predictor.py  hiresdino_preview.py  hiresdino_preview_gradio.py  myold_nystrom.py  speed_test.py  test_real_images.py  test_real_images_densesparse.py  test_sample_imb copy.py  test_sample_imb.py
tutorials/: application_point_prompt.ipynb  ncut_turtorial_multiple_images.ipynb  ncut_tutorial_color.ipynb  ncut_tutorial_videos.ipynb  tutorial1a_single_image.ipynb  tutorial1b_multiple_images.ipynb  tutorial1c_videos.ipynb  tutorial1d_language_model.ipynb  tutorial3_add_nodes.ipynb  tutorial4_add_nodes.ipynb  tutorial4_mix_resolution_image.ipynb  tutorial5_color.ipynb  tutorial5a_mix_resolution_image.ipynb
unit_tests/: README.md  bench_memory.py  bench_speed.py  conftest.py  test_biased_ncut.py  test_click_ncut.py  test_custom_affinity.py  test_edge_cases.py  test_kway_ncut.py  test_ncut.py  test_ncut_deterministic.py  test_nystrom_ncut.py  test_sample.py  test_visualize_utils.py
(+109 files in other folders)
