[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncut_pytorch"
version = "3.0.12"
authors = [
    { name = "Huzheng Yang", email = "huze.yann@gmail.com" },
]
description = "Normalized Cut and Spectral Embedding"
readme = "README.md"
requires-python = ">=3"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "fpsample>=0.2.0",
    "tqdm",
    "pillow",
    "matplotlib",
    "umap-learn",
]

[project.optional-dependencies]
cmap = [
    "pycolormap_2d",
    "scikit-image",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "tabulate",
    "pytest-benchmark>=5.1.0",
]
all = [
    "ncut_pytorch[cmap,dev]",
]

[project.urls]
Documentation = "https://ncut-pytorch.readthedocs.io/"
Github = "https://github.com/huzeyann/ncut_pytorch/"
PyPI = "https://pypi.org/project/ncut_pytorch/"

[tool.setuptools]
packages = {find = {include = ["ncut_pytorch*"]}}

[tool.setuptools.package-data]
"ncut_pytorch" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default)",
]
